--- a/h2tshop/h2tshop.csproj
+++ b/h2tshop/h2tshop.csproj
@@ -154,8 +154,10 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\createOrEditProduct.css" />
     <Content Include="Content\Home.js" />
     <Content Include="Content\mainStyle.css" />
+    <Content Include="Content\modal.css" />
     <Content Include="Content\progressbar.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -205,9 +207,12 @@
     <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Shared\_Layout_ad.cshtml" />
+    <Content Include="Views\Admin\QuanLySanPham.cshtml" />
+    <Content Include="Views\Product\createOrEditProduct.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
