--- a/h2tshop/h2tshop.csproj
+++ b/h2tshop/h2tshop.csproj
@@ -136,6 +136,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DBContext.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Models\entitiDB\DonHangDTO.cs" />
     <Compile Include="Models\entitiDB\Users.cs" />
     <Compile Include="Models\inputDTO\CartItemDTO.cs" />
     <Compile Include="Models\inputDTO\CartUpdateDTO.cs" />
@@ -209,6 +210,9 @@
     <Content Include="Views\Shared\_Layout_ad.cshtml" />
     <Content Include="Views\Admin\QuanLySanPham.cshtml" />
     <Content Include="Views\Product\createOrEditProduct.cshtml" />
+    <Content Include="Views\Admin\QuanLyDonHang.cshtml" />
+    <Content Include="Views\Admin\QuanLyLoaiSanPham.cshtml" />
+    <Content Include="Views\Cagetory\CreateOrEditCagetory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
