--- a/h2tshop/h2tshop.csproj
+++ b/h2tshop/h2tshop.csproj
@@ -213,6 +213,7 @@
     <Content Include="Views\Admin\QuanLyDonHang.cshtml" />
     <Content Include="Views\Admin\QuanLyLoaiSanPham.cshtml" />
     <Content Include="Views\Cagetory\CreateOrEditCagetory.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
