--- a/h2tshop/h2tshop.csproj
+++ b/h2tshop/h2tshop.csproj
@@ -46,6 +46,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
@@ -160,6 +166,7 @@
     <Content Include="Content\Home.js" />
     <Content Include="Content\mainStyle.css" />
     <Content Include="Content\modal.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="Content\progressbar.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -216,6 +223,8 @@
     <Content Include="Views\Cagetory\CreateOrEditCagetory.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Admin\TraCuuDonHang.cshtml" />
+    <Content Include="Views\Search\Indexs.cshtml" />
+    <Content Include="Views\Admin\QuanLyTaiKhoan.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
